--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -4,25 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/login.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}" defer></script>
     <title>Login</title>
 </head>
 <body>
-    <div class = "container">
-        <div id="navbar">
-            
+    <div id = "navbar">
+        <h1 id = "nav-title">>VisionBoard<</h1>
+        <div id = "nav-links">
+            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">About Us</a>
+            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">Resources</a>
+            <a href = "/" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">Sign Up</a>
         </div>
-        <div class = "form-card">
-            <form action = "/login" method = "post">
-                <label for = "username">
-                    <input type = "text" name = "username">
-                </label>
-                <label for = "password">
-                    <input type = "text" name = "password">
-                </label>
-                <input type="submit" value="Login">
-            </form>
+    </div>
+    <div id = "reg-container">
+        <div id="left-col">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <p id = "errors">{{ message }}</p>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %} 
+            <h2 class = "reg-header">Login Below</h2>
+            <div class = "form-card">
+                <form action = "/login" method = "post">
+                    <div>
+                        <label for = "username">
+                            <input type = "text" name = "username" class = "inputs" placeholder = "Username">
+                        </label>
+                    </div>
+                    <div>
+                        <label for = "password">
+                            <input type = "password" name = "password" class = "inputs" placeholder = "Password">
+                        </label>
+                    </div>
+                    <input type="submit" value="Login" id = "submit">
+                </form>
+            </div>
         </div>
     </div>
 </body>
