--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -11,9 +11,9 @@
     <div id = "navbar">
         <h1 id = "nav-title">>VisioBoard<</h1>
         <div id = "nav-links">
-            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">About Us</a>
-            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">Resources</a>
-            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">Need Help?</a>
+            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverLinks(this)">About Us</a>
+            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverLinks(this)">Resources</a>
+            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverLinks(this)">Need Help?</a>
         </div>
     </div>
     <div id = "reg-container">
@@ -62,6 +62,7 @@
         </div>
         <div id="right-col">
             <a href = "/login/page" class = "reg-header" onmouseover = "hoverText(this)" onmouseout = "hoverText(this)">Already Have an Account?</a>
+            <img src="{{ url_for('static', filename = 'images/visionboard.png') }}" alt="VisionBoard Image" id="vision-image">
         </div>
     </div>
 </body>
