--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -11,10 +11,10 @@
     <div id = "navbar">
         <h1 id = "nav-title">>VisioBoard<</h1>
         <div id = "nav-links">
-            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">About Us</a>
-            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">Resources</a>
-            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">Need Help?</a>
-            <a href = "/logout" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverText(this)">Log Out</a>
+            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverLinks(this)">About Us</a>
+            <a href = "#" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverLinks(this)">Resources</a>
+            <a href = "/ltg/form" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverLinks(this)">Add LTG</a>
+            <a href = "/logout" class = "nav-buttons" onmouseover = "hoverLinks(this)" onmouseout = "hoverLinks(this)">Log Out</a>
         </div>
     </div>
     <!--! Ideas for left-col are a side nav, or other users for interaction -->
