added get all ltg's to dashboard

--- a/flask_app/templates/addLTG.html
+++ b/flask_app/templates/addLTG.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div id="ltg-container">
-        <form action="/ltg/submit" method="post" id="ltg-form">
+        <form action="/ltg/submit" method="post" id="g-form">
             <h3 class = "reg-header">Add you Long Term Goal Below</h3>
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
