--- a/flask_app/templates/addSTG.html
+++ b/flask_app/templates/addSTG.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}" defer></script>
     <title>Add STG's</title>
 </head>
 <body>
-    
+    <div id="navbar">
+        <h1 id="nav-title">>VisionBoard<</h1>
+        <div id="nav-links">
+            <a href="#" class="nav-buttons" onmouseover="hoverLinks(this)" onmouseout="hoverLinks(this)">About Us</a>
+            <a href="#" class="nav-buttons" onmouseover="hoverLinks(this)" onmouseout="hoverLinks(this)">Resources</a>
+            <a href="/dashboard" class="nav-buttons" onmouseover="hoverLinks(this)" onmouseout="hoverLinks(this)">Home</a>
+        </div>
+    </div>
+    <div id="ltg-container">
+        <form action="/stg/submit" method="post" id="g-form">
+            <h3 class = "reg-header">Add Your Short Term Goal Below</h3>
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <p id = "errors">{{ message }}</p>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %} 
+            <input type="hidden" name="user_id" value="{{user.id}}">
+            <input type="hidden" name="long_term_goal_id" value="{{ltg.id}}">
+            <input type="hidden" name="is_complete" value="No">
+            <div>
+                <label for="title">
+                    <input class="inputs" type="text" name="title" id="title" placeholder="Title...">
+                </label>
+            </div>
+            <div>
+                <label for="description">
+                    <textarea class="inputs" name="description" id="description"  placeholder="Description..." cols="30" rows="10"></textarea>
+                </label>
+            </div>
+            <div>
+                <label for="goal_date">
+                    <input class="inputs" type="date" name="goal_date" id="goal_date">
+                </label>
+            </div>
+            <input type="submit" value="Submit" id="submit">
+        </form>
+    </div>
 </body>
 </html>
