--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -18,19 +18,26 @@
         </div>
     </div>
     <!--! Ideas for left-col are a side nav, or other users for interaction -->
-    <div id="left-col">
-        {% for ltg in user.long_term_goals %}
-            <p>{{ltg.title}}</p>
-        {% endfor %}
-    </div>
-    <!--? id="mid-col" should contain the cards with the long term goals, and should be clickable to expose the associated short term goals -->
-    <!-- Long term goals need to have image urls as object attributes -->
-    <div id="mid-col">
-
-    </div>
-
-    <div id="right-col">
-
+    <div id="container">
+        <div id="left-col">
+            
+        </div>
+        <!--? id="mid-col" should contain the cards with the long term goals, and should be clickable to expose the associated short term goals -->
+        <!-- Long term goals need to have image urls as object attributes -->
+        <div id="mid-col">
+            {% for ltg in user.long_term_goals %}
+                <div class="ltg-card">
+                    <img src="{{ url_for('static', filename='uploads/' ~ ltg.image) }}" alt="LTG Image" class="ltg-images">
+                    <h4>{{ ltg.title }}</h4>
+                    <p>{{ ltg.goal_date }}</p>
+                    <p>Complete: {{ ltg.is_complete }}</p>
+                </div>
+            {% endfor %}
+        </div>
+        
+        <div id="right-col">
+            
+        </div>
     </div>
 </body>
 </html>
