--- a/flask_app/static/css/dashboard.css
+++ b/flask_app/static/css/dashboard.css
@@ -35,3 +35,33 @@ body {
     width: 100px;
     text-align: center;
 }
+
+#container {
+    width: 1000px;
+    margin: 25px auto;
+}
+
+#mid-col {
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    width: 700px;
+}
+
+.ltg-images {
+    width: 200px;
+    height: 100px;
+    border-radius: 25% 25% 5% 5%;
+    border: 2px solid #05386B;
+}
+
+.ltg-card {
+    background-color: #05386B;
+    height: 200px;
+    border-radius: 25% 25% 5% 5%;
+    color: #EDF5E1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+}
