--- a/flask_app/static/css/dashboard.css
+++ b/flask_app/static/css/dashboard.css
@@ -45,7 +45,40 @@ body {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    width: 700px;
+    width: 800px;
+}
+
+#btn-div {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.full-card {
+    border: 2px solid #05386B;
+    border-radius: 23% 23% 23% 23%;
+    background-color: #EDF5E1;
+    height: 275px;
+    margin: 20px;
+}
+
+.submit {
+    height: 40px;
+    color: #EDF5E1;
+    background-color: #379683;
+    border-radius: 10px;
+    width: 80px;
+    cursor: pointer;
+}
+
+.reg-btn {
+    height: 40px;
+    color: #EDF5E1;
+    background-color: #379683;
+    border-radius: 10px;
+    width: 80px;
+    cursor: pointer;
+    margin: 20px;
 }
 
 .ltg-images {
@@ -66,3 +99,20 @@ body {
     align-items: center;
     margin: 10px;
 }
+
+.one-image {
+    height: 400px;
+    border: 2px solid #05386B;
+    object-fit: cover;
+}
+
+.view-one {
+    margin: 0 auto;
+    width: 800px;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
