--- a/flask_app/templates/allSTG.html
+++ b/flask_app/templates/allSTG.html
@@ -18,7 +18,8 @@
         </div>
     </div>
     <div id="container">
-        <h1 class="title">Short Term Goals with you goal: {{ ltg.title }}</h1>
+        <h1 class="title">Short Term Goals with your goal: {{ ltg.title }}</h1>
+        <a href="/add_stg/{{ ltg.id }}">Add STG</a>
         <table>
             <tr>
                 <th>Title</th>
